fixed dark mode button and nav link to join page

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -69,12 +69,17 @@ nav div h2 {
 .navigation li {
 	display: none;
 }
-.navigation li a {
+.navigation li a, .navigation li button {
 	display: block;
 	padding: 1rem;
 	text-align: center;
 	text-decoration: none;
 	color: white;
+	margin: auto;
+}
+.navigation li button {
+	margin-bottom: 10px;
+	color: var(--rich-black);
 }
 .navigation li a:hover {
 	background-color: #bbb;
